# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
gendiff/: __init__.py  gendiff.py  make_tree_for_gendiff.py  parser.py
gendiff/engine/: gendiff.py  parser.py
gendiff/engine/format/: formatter.py  json_formater.py  stylish_formatter.py
gendiff/format/: __init__.py  choice_format.py  json.py  plain.py  plain_formater.py  stylish.py  stylish_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_project.py
