[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Cli-utilite for find difference between two json/yaml files"
authors = ["Rodion Rizvanov <xirizvanov@gmail.com>"]
packages = [
  { include = "gendiff" },
]
readme = "README.md"
repository = "https://github.com/Xansir/python-project-50.git"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
codeclimate-test-reporter = "^0.2.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
