[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Cli-utilite for find difference between two json/yaml files"
authors = ["Rodion Rizvanov <xirizvanov@gmail.com>"]
packages = [
  { include = "gendiff" },
]


[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"


[tool.poetry.dev-dependencies]
flake8 = "^6.1.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
